--- a/urbanstory/pages/components/toast.html
+++ b/urbanstory/pages/components/toast.html
@@ -28,7 +28,14 @@
 			<p>Toast sample</p>
 			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
-		<pre><code>&lt;div class=&quot;toast&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;toast&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
     &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
@@ -52,23 +59,158 @@
     &lt;p&gt;Toast sample&lt;/p&gt;
     &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-1"><code>
+.toast {
+	// @extend .padd-l;
+	padding: 0 $gutter-l;
+	overflow: auto;
+	background: #f3f3f3;
+	border: 1px solid rgba($c-grey-3, 0.2);
+	//line-height:1.5rem;
+	position: relative;
+	color: $c-grey-6;
+	min-width: 320px;
+	max-width: 100%;
+	padding-right: 50px;
+	@include radius;
+	&.is-info {
+		background: $c-info-alert;
+		border: 1px solid rgba($c-median-3, 0.2);
+		//color:rgba($c-median-2, .75);
+		color: $c-median-3;
+		.alert-close {
+			color: rgba($c-median-3, 0.75);
+		}
+	}
+	&.is-success {
+		background: $c-green-alert;
+		border: 1px solid rgba($c-green-3, 0.2);
+		color: $c-green-3;
+		.alert-close {
+			color: rgba($c-green-3, 0.75);
+		}
+	}
+	&.is-warning {
+		background: $c-yellow-alert;
+		border: 1px solid rgba($c-yellow-3, 0.2);
+		color: $c-yellow-3;
+		.alert-close {
+			color: rgba($c-yellow-3, 0.75);
+		}
+	}
+	&.is-danger {
+		background: $c-red-alert;
+		border: 1px solid rgba($c-red-3, 0.2);
+		color: $c-red-3;
+		.alert-close {
+			color: rgba($c-red-3, 0.75);
+		}
+	}
+	.toast-close {
+		position: absolute;
+		top: 12px;
+		right: $gutter-m;
+		color: rgba(black, 0.35);
+	}
+}
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Fixed Toast</h4>
-		<button class="btn btn-firm-o">Call Toast</button>
-		<div class="toast-fixed-wrapper">
-			<div class="toast is-info hide">
-				<p>Fixed toast sample</p>
-				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
-			</div>
-			<div class="toast is-danger">
-				<p>Fixed toast sample</p>
-				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
-			</div>
-			<div class="toast is-success hide">
-				<p>Fixed toast sample</p>
-				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
-			</div>
+		<button class="btn btn-firm-o toast-caller">Call Toast</button>
+		<div class="toast-fixed-wrapper" id="toast-fixed-content">
 		</div>
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-2"><code>
+&lt;div class=&quot;toast-fixed-wrapper&quot;&gt;
+	&lt;div class=&quot;toast is-info&quot;&gt;
+		&lt;p&gt;Fixed toast sample&lt;/p&gt;
+		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;toast is-danger&quot;&gt;
+		&lt;p&gt;Fixed toast sample&lt;/p&gt;
+		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;toast is-success&quot;&gt;
+		&lt;p&gt;Fixed toast sample&lt;/p&gt;
+		&lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+	&lt;/div&gt;
+&lt;/div&gt;
+			</code></pre>
+			<pre class="code-snippet" id="sass-2"><code>
+.toast {
+	// @extend .padd-l;
+	padding: 0 $gutter-l;
+	overflow: auto;
+	background: #f3f3f3;
+	border: 1px solid rgba($c-grey-3, 0.2);
+	//line-height:1.5rem;
+	position: relative;
+	color: $c-grey-6;
+	min-width: 320px;
+	max-width: 100%;
+	padding-right: 50px;
+	@include radius;
+	&.is-info {
+		background: $c-info-alert;
+		border: 1px solid rgba($c-median-3, 0.2);
+		//color:rgba($c-median-2, .75);
+		color: $c-median-3;
+		.alert-close {
+			color: rgba($c-median-3, 0.75);
+		}
+	}
+	&.is-success {
+		background: $c-green-alert;
+		border: 1px solid rgba($c-green-3, 0.2);
+		color: $c-green-3;
+		.alert-close {
+			color: rgba($c-green-3, 0.75);
+		}
+	}
+	
+	&.is-danger {
+		background: $c-red-alert;
+		border: 1px solid rgba($c-red-3, 0.2);
+		color: $c-red-3;
+		.alert-close {
+			color: rgba($c-red-3, 0.75);
+		}
+	}
+	.toast-close {
+		position: absolute;
+		top: 12px;
+		right: $gutter-m;
+		color: rgba(black, 0.35);
+	}
+	&.hide {
+		display: none;
+	}
+}
+
+.toast-fixed-wrapper {
+	position: fixed;
+	z-index: 889;
+	//background:grey;
+	//outline: solid 1px red;
+	bottom: $gutter-l;
+	left: $gutter-l;
+	.toast {
+		margin-bottom: $gutter-m;
+		@include box-shadow(0 8px 16px rgba(black, 0.2));
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+			</code></pre>
+		</section>
 	</section>
 </div>
