--- a/urbanstory/pages/components/avatar.html
+++ b/urbanstory/pages/components/avatar.html
@@ -16,17 +16,62 @@
 		<div class="avatar">
 			<span>RN</span>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;avatar&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar&quot;&gt;
-	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+  &lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar&quot;&gt;
-	&lt;span&gt;RN&lt;/span&gt;
+  &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-1"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+}
+			</code></pre>
+		</section>
 
 		<h4>Avatar <code>.is-sm</code></h4>
 		<div class="avatar is-sm">
@@ -40,17 +85,69 @@
 		<div class="avatar is-sm">
 			<span>RN</span>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar is-sm&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;avatar is-sm&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-sm&quot;&gt;
-	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+  &lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-sm&quot;&gt;
-	&lt;span&gt;RN&lt;/span&gt;
+  &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-2"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	&.is-sm {
+		width: 48px;
+		height: 48px;
+		span {
+			font-size: 1rem;
+		}
+	}
+}
+			</code></pre>
+		</section>
 
 		<h4>Avatar <code>.is-md</code></h4>
 		<div class="avatar is-md">
@@ -64,18 +161,71 @@
 		<div class="avatar is-md">
 			<span>RN</span>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar is-md&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;avatar is-md&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-md&quot;&gt;
-	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+  &lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-md&quot;&gt;
-	&lt;span&gt;RN&lt;/span&gt;
+  &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-
+			<pre class="code-snippet" id="sass-3"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	
+	&.is-md {
+		width: 64px;
+		height: 64px;
+		span {
+			font-size: 1.5rem;
+		}
+	}
+		
+}
+			</code></pre>
+		</section>
 		<h4>Avatar <code>.is-lg</code></h4>
 		<div class="avatar is-lg is-o">
 			<img src="https://randomuser.me/api/portraits/women/17.jpg">
@@ -88,18 +238,69 @@
 		<div class="avatar is-lg">
 			<span>RN</span>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar is-lg&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;avatar is-lg&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-lg&quot;&gt;
-	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+  &lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-lg&quot;&gt;
-	&lt;span&gt;RN&lt;/span&gt;
+  &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-
+			<pre class="code-snippet" id="sass-4"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	&.is-lg {
+		width: 96px;
+		height: 96px;
+		span {
+			font-size: 2rem;
+		}
+	}
+}
+			</code></pre>
+		</section>
 		<h4>Avatar <code>.is-xl</code></h4>
 		<div class="avatar is-xl">
 			<img src="https://randomuser.me/api/portraits/men/11.jpg">
@@ -112,18 +313,69 @@
 		<div class="avatar is-xl">
 			<span>RN</span>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar is-xl&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-5"><code>&lt;div class=&quot;avatar is-xl&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-xl&quot;&gt;
-	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+  &lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;div class=&quot;avatar is-xl&quot;&gt;
-	&lt;span&gt;RN&lt;/span&gt;
+  &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-
+			<pre class="code-snippet" id="sass-5"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	&.is-xl {
+		width: 128px;
+		height: 128px;
+		span {
+			font-size: 2rem;
+		}
+	}
+}
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Avatar group</h4>
@@ -144,24 +396,83 @@
 				<img src="https://randomuser.me/api/portraits/men/15.jpg">
 			</div>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar-group&quot;&gt;
-	&lt;div class=&quot;avatar&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
-	&lt;/div&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-6" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-6" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-6"><code>&lt;div class=&quot;avatar-group&quot;&gt;
+  &lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
-
+			<pre class="code-snippet" id="sass-6"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+}
+.avatar-group {
+	.avatar {
+		display: inline-block;
+		position: relative;
+		z-index: 1;
+		@include box-shadow(0 0 0 2px white);
+		&:hover {
+			z-index: 2;
+			@include box-shadow(0 0 0 3px rgba(black, 0.25));
+		}
+		&+.avatar {
+			margin-left: -($gutter-m);
+		}
+	}
+}
+			</code></pre>
+		</section>
 		<h4>Avatar group <code>.is-sm</code></h4>
 		<div class="avatar-group">
 			<div class="avatar is-sm">
@@ -180,24 +491,91 @@
 				<img src="https://randomuser.me/api/portraits/men/15.jpg">
 			</div>
 		</div>
-		<pre><code>&lt;div class=&quot;avatar-group&quot;&gt;
-	&lt;div class=&quot;avatar is-sm&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar is-sm&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar is-sm&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar is-sm&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
-	&lt;/div&gt;
-	&lt;div class=&quot;avatar is-sm&quot;&gt;
-		&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
-	&lt;/div&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-7" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-7" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-7"><code>&lt;div class=&quot;avatar-group&quot;&gt;
+  &lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-7"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	&.is-sm {
+		width: 48px;
+		height: 48px;
+		span {
+			font-size: 1rem;
+		}
+	}
+}
 
+.avatar-group {
+	.avatar {
+		display: inline-block;
+		position: relative;
+		z-index: 1;
+		@include box-shadow(0 0 0 2px white);
+		&:hover {
+			z-index: 2;
+			@include box-shadow(0 0 0 3px rgba(black, 0.25));
+		}
+		&+.avatar {
+			margin-left: -($gutter-m);
+		}
+	}
+}
+			</code></pre>
+		</section>
 	</section>
 	<section>
 		<h4>Avatar Variants</h4>
@@ -208,11 +586,62 @@
 		<div class="avatar is-o">
 			<img src="https://randomuser.me/api/portraits/men/11.jpg">
 		</div>
-		<pre><code>&lt;div class=&quot;avatar is-square&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+		<section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-8" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-8" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+			<pre class="code-snippet display-on" id="html-8"><code>&lt;div class=&quot;avatar is-square&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;avatar is-o&quot;&gt;
-	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+  &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;</code></pre>
+			<pre class="code-snippet" id="sass-8"><code>
+.avatar {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	overflow: hidden;
+	background: $c-grey-1;
+	@include border-radius(100%);
+	@include box-shadow(inset 0 0 0 1px rgba(black, 0.05));
+	@extend .transition;
+	img {
+		max-width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+	}
+	span {
+		display: inline;
+		position: absolute;
+		width: 100%;
+		height: 2rem;
+		text-align: center;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
+		font-size: (12/16) + rem;
+		line-height: 2rem;
+		color: black;
+		color: $c-grey-3;
+	}
+	&.is-square {
+		@include border-radius(0);
+	}
+	&.is-o {
+		@include box-shadow(0 0 0 2px white);
+	}
+}
+			</code></pre>
+		</section>
 	</section>
 </div>
