--- a/urbanstory/pages/components/breadcrumbs.html
+++ b/urbanstory/pages/components/breadcrumbs.html
@@ -8,10 +8,48 @@
             <a href="#">Page</a>
             <a href="#" class="active">Sub Page</a>
         </nav>
-        <pre><code>&lt;nav class=&quot;breadcrumb&quot;&gt;
+        <section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+            <pre class="code-snippet display-on" id="html-1"><code>&lt;nav class=&quot;breadcrumb&quot;&gt;
     &lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;Page&lt;/a&gt;
     &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Sub Page&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
+            <pre class="code-snippet" id="sass-1"><code>
+.breadcrumb {
+    a {
+        height: $br-height;
+        display: inline-block;
+        color: $c-grey-5;
+        font-size: 14px;
+        line-height: $br-height;
+        @extend .transition;
+        &:hover {
+            color: $c-grey-4;
+            @extend .transition;
+        }
+        &:not(:last-child):after {
+            color: $c-grey-3;
+            font-family: $font-icon;
+            content: "\E005";
+            display: inline-block;
+            margin: 0 4px;
+            vertical-align: bottom;
+        }
+    }
+    .active {
+        @include border-radius(0);
+        border: none;
+        background-color: transparent;
+        color: $c-grey-3;
+    }
+}
+            </code></pre>
+        </section>
     </section>
 </div>
