--- a/urbanstory/pages/components/chips.html
+++ b/urbanstory/pages/components/chips.html
@@ -30,27 +30,113 @@
                 </div>
             </div>
         </div>
-        <pre><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
+        <section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
+
 &lt;div class=&quot;chip&quot;&gt;Chip with icon
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-dashed&quot;&gt;Chip dashed
     &lt;button&gt;&lt;i class=&quot;icon-plus&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-firm&quot;&gt;Chip firm
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-success&quot;&gt;Chip success
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-danger&quot;&gt;Chip danger
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-warning&quot;&gt;Chip warning
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
+
 &lt;div class=&quot;chip chip-median&quot;&gt;Chip median
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
+            <pre class="code-snippet" id="sass-1"><code>
+.chip {
+	display: inline-flex;
+	@include flex-middle;
+	justify-content: center;
+	border-radius: $chip-height / 2;
+	background-color: $c-grey-1;
+	color: $c-grey-4;
+	font-size: 12px;
+	padding: 0 $gutter-l;
+	height: $chip-height;
+	min-width: $chip-height * 2;
+	margin-right: $gutter-s;
+	i {
+		font-size: 12px;
+		color: $c-grey-4;
+	}
+	button {
+		background: none;
+		border: none;
+		width: $chip-height;
+		height: $chip-height;
+		text-align: center;
+		padding: 0;
+		outline: none;
+		margin-right: -($gutter-l);
+		@include border-radius($chip-height);
+		@extend .transition;
+		i {
+			color: rgba(black, 0.25);
+			@extend .transition;
+			&:before {
+				vertical-align: middle;
+			}
+		}
+		&:hover {
+			cursor: pointer;
+			i {
+				color: rgba(black, 0.4);
+			}
+		}
+		&:focus {
+			background: rgba(black, 0.1);
+		}
+	}
+	&.chip-firm {
+		background-color: rgba(39, 145, 217, 0.1);
+		color: $c-firm-1;
+	}
+	&.chip-dashed {
+		background-color: white;
+		border: 1px dashed $c-grey-5;
+	}
+	&.chip-success {
+		background: $c-green-1;
+		color: white;
+	}
+	&.chip-danger {
+		background: $c-red-1;
+		color: white;
+	}
+	&.chip-warning {
+		background: $c-yellow-1;
+		color: white;
+	}
+	&.chip-median {
+		background: $c-median-1;
+		color: white;
+	}
+}
+            </code></pre>
+        </section>
     </section>
 </div>
