--- a/urbanstory/pages/components/labels.html
+++ b/urbanstory/pages/components/labels.html
@@ -12,12 +12,70 @@
             <div class="label label-warning">Badge warning</div>
             <div class="label label-median">Badge median</div>
         </div>
-        <pre><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
+        <section class="code-preview">
+			<div class="card uh-tab">
+				<nav class="uh-tab-nav">
+					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+				</nav>
+			</div>
+            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
+
 &lt;div class=&quot;label label-grey&quot;&gt;Badge flat grey&lt;/div&gt;
+
 &lt;div class=&quot;label label-firm&quot;&gt;Badge prime&lt;/div&gt;
+
 &lt;div class=&quot;label label-success&quot;&gt;Badge success&lt;/div&gt;
+
 &lt;div class=&quot;label label-danger&quot;&gt;Badge danger&lt;/div&gt;
+
 &lt;div class=&quot;label label-warning&quot;&gt;Badge warning&lt;/div&gt;
+
 &lt;div class=&quot;label label-median&quot;&gt;Badgemedian&lt;/div&gt;</code></pre>
+            <pre class="code-snippet" id="sass-1"><code>
+.label {
+	border: 1px solid $c-grey-3;
+	@include border-radius(10px);
+	color: $c-grey-5;
+	display: inline-block;
+	font-size: 11px;
+	height: $label-height;
+	line-height: $label-height - 2;
+	min-width: $label-height * 2;
+	margin-left: $gutter-s;
+	padding: 0 $gutter-m;
+	@extend .align-center;
+	&.label-firm {
+		background-color: $c-firm-1;
+		border: 1px solid $c-firm-1;
+		color: $c-white;
+	}
+	&.label-success {
+		background-color: $c-green-1;
+		border: 1px solid $c-green-1;
+		color: $c-white;
+	}
+	&.label-grey {
+		background-color: $c-grey-2;
+		border: 1px solid $c-grey-2;
+		color: $c-grey-5;
+	}
+	&.label-danger {
+		background-color: $c-red-1;
+		border: 1px solid $c-red-1;
+		color: $c-white;
+	}
+	&.label-warning {
+		background-color: $c-yellow-1;
+		border: 1px solid $c-yellow-1;
+		color: $c-white;
+	}
+	&.label-median {
+		background-color: $c-median-1;
+		border: 1px solid $c-median-1;
+		color: $c-white;
+	}
+}
+            </code></pre>
     </section>
 </div>
