--- a/urbanstory/pages/components/preloader.html
+++ b/urbanstory/pages/components/preloader.html
@@ -12,10 +12,93 @@
     	<button class="btn btn-danger btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
 	</section>
 	<section>
-		<pre><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
+		<div class="card uh-tab">
+			<nav class="uh-tab-nav">
+				<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+				<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+			</nav>
+		</div>
+		<pre class="code-snippet display-on" id="html-1"><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader is-large&quot;&gt;Loading...&lt;/span&gt;
 &lt;button class=&quot;btn btn-firm btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;
 &lt;button class=&quot;btn btn-danger btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;</code></pre>
+		<pre class="code-snippet" id="sass-1"><code>
+.btn {
+	&.uh-loader {
+		// vertical-align: bottom;
+	}
+}
+
+.uh-loader {
+	width: 20px;
+	height: 20px;
+	display: inline-flex;
+	margin: 1em auto;
+	font-size: 10px;
+	border-radius: 50%;
+	position: relative;
+	text-indent: -9999em;
+	border-top: 4px solid rgba($c-firm-1, 0.2);
+	border-right: 4px solid rgba($c-firm-1, 0.2);
+	border-bottom: 4px solid rgba($c-firm-1, 0.2);
+	border-left: 4px solid rgba($c-firm-1, .8);
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-animation: animate-rotate 1.1s infinite linear;
+	animation: animate-rotate 1.1s infinite linear;
+	&:after {
+		border-radius: 50%;
+		width: 20px;
+		height: 20px;
+		outline: solid 1px red;
+	}
+	&.is-small {
+		width: 16px;
+		height: 16px;
+		&:after {
+			width: 16px;
+			height: 16px;
+		}
+	}
+	&.is-large {
+		width: 32px;
+		height: 32px;
+		&:after {
+			width: 32px;
+			height: 32px;
+		}
+	}
+	&.is-white {
+		border-top: 4px solid rgba(white, 0.2);
+		border-right: 4px solid rgba(white, 0.2);
+		border-bottom: 4px solid rgba(white, 0.2);
+		border-left: 4px solid rgba(white, .8);
+	}
+}
+
+@-webkit-keyframes animate-rotate {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes animate-rotate {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+		</code></pre>
 	</section>
 </div>
