--- a/urbanstory/pages/components/slider.html
+++ b/urbanstory/pages/components/slider.html
@@ -16,7 +16,14 @@
             <input type="range" min="0" max="100" step="1" value="5" oninput="lowerSlide()" id="lower">
             <input type="range" min="0" max="100" step="1" value="95" oninput="upperSlide()" id="upper">
         </div>
-        <pre><code>&lt;div class=&quot;range-slider&quot;&gt;
+        <section class="code-preview">
+            <div class="card uh-tab">
+                <nav class="uh-tab-nav">
+                    <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+                    <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+                </nav>
+            </div>
+            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;range-slider&quot;&gt;
     &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot; id=&quot;slider&quot;&gt;
     &lt;/div&gt;
 
@@ -24,5 +31,63 @@
     &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;5&quot;&gt;
     &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;95&quot;&gt;
 &lt;/div&gt;</code></pre>
+            <pre class="code-snippet" id="sass-1"><code>
+.range-slider {
+    width: 100%;
+    input[type="range"] {
+        -webkit-appearance: none;
+        width: 100%;
+        height: 10px;
+        background: -webkit-linear-gradient(left, $c-firm-1 0, $c-grey-2 0);
+        background: -moz-linear-gradient(left, $c-firm-1 0, $c-grey-2 0);
+        background: -o-linear-gradient(left, $c-firm-1 0, $c-grey-2 0);
+        background: -webkit-gradient( linear, left top, right top, color-stop(0, $c-firm-1), color-stop(0, $c-grey-2));
+        background: linear-gradient(90deg, $c-firm-1 0, $c-grey-2 0);
+        outline: none;
+        margin: 0;
+        padding: 0;
+        @include border-radius(8px);
+        @extend .transition;
+        &:hover {
+            opacity: 1;
+        }
+        &::-webkit-slider-thumb {
+            position: relative;
+            @include border-radius(50%);
+            -webkit-appearance: none;
+            appearance: none;
+            width: $chip-height;
+            height: $chip-height;
+            background: white;
+            border: 3px solid $c-firm-1;
+            cursor: pointer;
+            z-index: 1;
+        }
+        &::-moz-range-thumb {
+            @include border-radius(50%);
+            width: $chip-height;
+            height: $chip-height;
+            background: white;
+            border: 3px solid $c-firm-1;
+            cursor: pointer;
+        }
+    }
+    &.dual {
+        position: relative;
+        margin-bottom: 5rem;
+        input[type="range"] {
+            position: absolute;
+            top: 0;
+        }
+        #upper {
+            background: -webkit-gradient( linear, left top, right top, color-stop(0, $c-grey-2), color-stop(1%, $c-grey-2), color-stop(1%, $c-firm-1), color-stop(1%, $c-firm-1), color-stop(1%, $c-grey-2), to($c-grey-2));
+            background: -webkit-linear-gradient( left, $c-grey-2 0, $c-grey-2 1%, $c-firm-1 1%, $c-firm-1 1%, $c-grey-2 1%, $c-grey-2 100%);
+            background: -moz-linear-gradient( left, $c-grey-2 0, $c-grey-2 1%, $c-firm-1 1%, $c-firm-1 1%, $c-grey-2 1%, $c-grey-2 100%);
+            background: -o-linear-gradient( left, $c-grey-2 0, $c-grey-2 1%, $c-firm-1 1%, $c-firm-1 1%, $c-grey-2 1%, $c-grey-2 100%);
+            background: linear-gradient( 90deg, $c-grey-2 0, $c-grey-2 1%, $c-firm-1 1%, $c-firm-1 1%, $c-grey-2 1%, $c-grey-2 100%);
+        }
+    }
+}
+            </code></pre>
     </section>
 </div>
