--- a/urbanstory/pages/components/tab.html
+++ b/urbanstory/pages/components/tab.html
@@ -13,7 +13,14 @@
                 <div class="nav-item no-grow"><i class="icon-grid"></i></div>
             </nav>
         </div>
-        <pre><code>&lt;div class=&quot;card uh-tab&quot;&gt;
+        <section class="code-preview">
+            <div class="card uh-tab">
+                <nav class="uh-tab-nav">
+                    <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
+                    <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+                </nav>
+            </div>
+             <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;card uh-tab&quot;&gt;
     &lt;nav class=&quot;uh-tab-nav&quot;&gt;
         &lt;div class=&quot;nav-item active&quot;&gt;TAB 1&lt;/div&gt;
         &lt;div class=&quot;nav-item&quot;&gt;TAB 2&lt;/div&gt;
@@ -22,10 +29,7 @@
         &lt;div class=&quot;nav-item no-grow&quot;&gt;TAB 5&lt;/div&gt;
     &lt;/nav&gt;
 &lt;/div&gt;</code></pre>
-    </section>
-    <section>
-        <h4>SASS</h4>
-        <pre><code>.uh-tab {
+            <pre class="code-snippet" id="sass-1"><code>.uh-tab {
     background: $c-bg-color;
     @include box-shadow($card-box-shadow);
     display: block;
@@ -79,6 +83,6 @@
         position: relative;
         display: none;
     }
-}</code></pre>
+}       </code></pre>
     </section>
 </div>
