--- a/urbanstory/pages/components/tooltip.html
+++ b/urbanstory/pages/components/tooltip.html
@@ -249,31 +249,28 @@
             }
         </code>
     </pre>
-    <pre id="html">
-        <code class="language-html"> 
-            &lt;span class=&quot;tooltip&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-                &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
-            &lt;/span&gt;
-        </code>
-        <code>
-            &lt;span class=&quot;tooltip-right&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-                &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
-            &lt;/span&gt;
-        </code>
-        <code>
-            &lt;span class=&quot;tooltip-left&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-                &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
-            &lt;/span&gt;
-        </code>
-        <code>
-            &lt;span class=&quot;tooltip-top&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-                &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
-            &lt;/span&gt;
-        </code>
-        <code>
-            &lt;span class=&quot;tooltip-bottom&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;
-                &lt;button class=&quot;btn btn-firm&quot;&gt;Hover me&lt;/button&gt;
-            &lt;/span&gt;
-        </code>
-    </pre>
+<pre id="html"><code>&lt;div class=&quot;urbanstory-tooltip-style&quot;&gt;
+    &lt;h4&gt;Tootltip &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
+    &lt;button class=&quot;btn btn-firm tooltip&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;Hover me&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;urbanstory-tooltip-style&quot;&gt;
+    &lt;h4&gt;Tootltip &lt;code&gt;.tooltip-right&lt;/code&gt;&lt;/h4&gt;
+    &lt;button class=&quot;btn btn-firm tooltip-right&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;Hover me&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;urbanstory-tooltip-style&quot;&gt;
+    &lt;h4&gt;Tootltip &lt;code&gt;.tooltip-left&lt;/code&gt;&lt;/h4&gt;
+    &lt;button class=&quot;btn btn-firm tooltip-left&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;Hover me&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;urbanstory-tooltip-style&quot;&gt;
+    &lt;h4&gt;Tootltip &lt;code&gt;.tooltip-top&lt;/code&gt;&lt;/h4&gt;
+    &lt;button class=&quot;btn btn-firm tooltip-top&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;Hover me&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;urbanstory-tooltip-style&quot;&gt;
+    &lt;h4&gt;Tootltip &lt;code&gt;.tooltip-bottom&lt;/code&gt;&lt;/h4&gt;
+    &lt;button class=&quot;btn btn-firm tooltip-bottom&quot; data-tooltip='Using 3 UH coins per candidate invitation.'&gt;Hover me&lt;/button&gt;
+&lt;/div&gt;</code></pre>
 </section>
