--- a/urbanstory/pages/components/switch.html
+++ b/urbanstory/pages/components/switch.html
@@ -4,8 +4,8 @@
     </section>
     <section>
         <div class="uh-switch">
-            <button class="uh-switch-button">
-                <div class="handle"></div>
+            <button>
+                <span></span>
             </button>
         </div>
     </section>
@@ -17,40 +17,45 @@
             </nav>
         </div>
         <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;uh-switch&quot;&gt;
-    &lt;button class=&quot;uh-switch-button&quot;&gt;
-        &lt;div class=&quot;handle&quot;&gt;&lt;/div&gt;
+    &lt;button&gt;
+        &lt;span&gt;&lt;/span&gt;
     &lt;/button&gt;
 &lt;/div&gt;
         </code></pre>
-        <pre class="code-snippet" id="sass-1"><code>
-.uh-switch {
-    .uh-switch-button {
-        cursor: pointer;
-        position: relative;
-        display: inline-block;
-        width: 40px;
-        height: 20px;
-        @include border-radius(10px);
-        border: none;
-        background: $c-grey-2;
-        outline: none;
-    }
-    .handle {
-        position: absolute;
-        @include border-radius(50%);
-        height: 20px;
-        width: 20px;
-        background: $c-grey-4;
-        top: 0;
-        left: 0;
-        transition: left .2s;
-        &.active {
-            left: 20px;
-            background: #2791d9;
-            transition: left .2s;
-        }
-    }
-}
-        </code></pre>
+        <pre class="code-snippet" id="sass-1"><code>.uh-switch {
+            display: inline-block;
+            button {
+                cursor: pointer;
+                position: relative;
+                display: inline-block;
+                width: 40px;
+                height: 20px;
+                @include border-radius(10px);
+                border: none;
+                background: $c-grey-2;
+                outline: none;
+            }
+            span {
+                display: block;
+                position: absolute;
+                @include border-radius(50%);
+                height: 20px;
+                width: 20px;
+                background: $c-grey-4;
+                top: 0;
+                left: 0;
+                transition: left .2s;
+            }
+            &amp;.active {
+                button {
+                    background: $sc-median;
+                }
+                span {
+                    left: 20px;
+                    background: $c-median-1;
+                    transition: left .2s;
+                }
+            }
+        }</code></pre>
     </section>
 </div>
