--- a/urbanstory/src/css/sass/components-global/_switch.scss
+++ b/urbanstory/src/css/sass/components-global/_switch.scss
@@ -1,5 +1,6 @@
 .uh-switch{
-    .uh-switch-button{
+    display: inline-block;
+    button{
         cursor: pointer;
         position: relative;
         display: inline-block;
@@ -11,7 +12,8 @@
         outline: none;
     }
 
-    .handle{
+    span{
+        display:block;
         position: absolute;
         @include border-radius(50%);
         height: 20px;
@@ -19,12 +21,16 @@
         background: $c-grey-4;
         top: 0;
         left: 0;
-        transition: left .2s;
-
-        &.active{
+        transition: left .2s;  
+    }
+    &.active{
+        button{
+            background: $sc-median;
+        }
+        span{
             left: 20px;
-            background: #2791d9;
+            background: $c-median-1;
             transition: left .2s;
         }
-    }    
+    }   
 }
